--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <title>App</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   </head>
   <body style='margin: 0'>
     <div id="root"></div>
